--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="empty_image_warning">Silakan masukkan berkas gambar terlebih dahulu.</string>
     <string name="result">Hasil Analisis</string>
     <string name="no_text_recognized">No text recognized!</string>
+
+    <string name="downloading_model_fail">Model gagal diunduh</string>
+    <string name="translate">Translate</string>
 </resources>
